# IPA

./: .gitignore
IPA02/: CMakeLists.txt  conv.cpp  conv.h  ipa01_main.cpp  ipa02_main.cpp  ipa03_main.cpp  main.cpp
IPA02/gray/: mandril_color.tif
gray/: lena512color.tif
